[tool.poetry]
name = "paving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^1.6.2"
colorama = "^0.4.4"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
